Change API endpoints

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Home Page - QuickApp</title>
+  <title>Home Page - CC</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -29,7 +29,7 @@
           </div>
         </div>
         <p>
-          QUICK APPLICATION SYSTEM - <span class="appName" style="font-style:italic">quick</span><span class="appName">App</span> &copy; <a href="https://www.ebenmonney.com">WWW.EBENMONNEY.COM</a>
+        MY CODDING CHALLENGES - <span class="appName" style="font-style:italic">quick</span><span class="appName">App</span> &copy; <a href="https://www.itmb.com.au">www.itmb.com.au</a>
         </p>
 
       </div>
